<resources>
    <string name="app_name">MultiStepLogin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="done">Done!</string>
    <string name="username_password_together">Username (label, no hint) &amp; Password</string>
    <string name="multi_step_login">Multi-step Login</string>
    <string name="basic_multi_step_login">Basic Multi-step Login</string>
    <string name="password_only_login">Password-Only Login</string>
    <string name="multi_step_login_two_password_fields">Multi-step Login with Two Password Fields
    </string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_min_length">Password must be at least 3 chars in length</string>
    <string name="multi_step_login_extra_screen_after_password">Multi-step Login with an Extra Screen at the
        End of the Flow
    </string>
    <string name="multi_step_login_extra_screen_after_username">Multi-step Login with an Extra
        Screen Between Username and Password
    </string>

    <string name="multi_step_login_extra_screen_before_username">Multi-step Login with an Extra
        at the Start of the Flow
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="payment_card">Payment Card</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_expiration_mm_yyyy">MM/YYYY</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">ZIP code</string>
    <string name="phone_number">Phone Number</string>
    <string name="two_factor_code">Two-Factor Code</string>
    <string name="two_factor_code_multi">Two-Factor Code Multi</string>
    <string name="otp_username_password">OTP, Username, Password</string>
    <string name="webview">WebView</string>
    <string name="password_visible">Password Visible</string>
    <string name="password_not_visible">Password Not Visible</string>
    <string name="otp_code">Enter One-Time Passcode</string>
    <string name="custom_tab">Custom Tab</string>
    <string name="URL">URL</string>
    <string name="url_for_custom_tab">URL to open in a Custom Tab</string>
</resources>
