<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.autofill.multisteplogin.MultiLoginActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="16dp">

        <com.test.autofill.multisteplogin.navigation.NavigationItem
            android:id="@+id/basicMultiStepLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/basic_multi_step_login">
        </com.test.autofill.multisteplogin.navigation.NavigationItem>

        <com.test.autofill.multisteplogin.navigation.NavigationItem
            android:id="@+id/multiStepLoginWithTwoPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/multi_step_login_two_password_fields">
        </com.test.autofill.multisteplogin.navigation.NavigationItem>

        <com.test.autofill.multisteplogin.navigation.NavigationItem
            android:id="@+id/multiStepLoginWithExtraScreenAfterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/multi_step_login_extra_screen_after_password">
        </com.test.autofill.multisteplogin.navigation.NavigationItem>

        <com.test.autofill.multisteplogin.navigation.NavigationItem
            android:id="@+id/multiStepLoginWithExtraScreenAfterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/multi_step_login_extra_screen_after_username">
        </com.test.autofill.multisteplogin.navigation.NavigationItem>

        <com.test.autofill.multisteplogin.navigation.NavigationItem
            android:id="@+id/multiStepLoginWithExtraScreenBeforeUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/multi_step_login_extra_screen_before_username">
        </com.test.autofill.multisteplogin.navigation.NavigationItem>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
