<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="yes">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="first_name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="last_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/streetAddress1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/address_line_1"
        android:autofillHints="address_1"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/streetAddress2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="address_2"
        android:ems="10"
        android:hint="@string/address_line_2"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/streetAddress1"
        app:layout_constraintStart_toStartOf="@+id/streetAddress1"
        app:layout_constraintTop_toBottomOf="@+id/streetAddress1" />

    <EditText
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/city"
        android:autofillHints="city"
        app:layout_constraintEnd_toEndOf="@+id/streetAddress2"
        app:layout_constraintStart_toStartOf="@+id/streetAddress2"
        app:layout_constraintTop_toBottomOf="@+id/streetAddress2" />

    <EditText
        android:id="@+id/state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="state"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/state"
        app:layout_constraintStart_toStartOf="@+id/state"
        app:layout_constraintTop_toBottomOf="@+id/state" />


</androidx.constraintlayout.widget.ConstraintLayout>