<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp" android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="username"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/submitButton"
        app:layout_constraintStart_toStartOf="@id/submitButton"
        app:layout_constraintEnd_toEndOf="@id/submitButton">

        <RadioButton android:id="@+id/radioPasswordVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_visible"/>
        <RadioButton android:id="@+id/radioPasswordNotVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_not_visible"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>