<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="yes">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="username"/>


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />


    <EditText
        android:id="@+id/twoFactorCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/two_factor_code"
        android:ems="10"
        android:hint="@string/two_factor_code"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/twoFactorCode"
        app:layout_constraintStart_toStartOf="@+id/twoFactorCode"
        app:layout_constraintTop_toBottomOf="@+id/twoFactorCode" />

</androidx.constraintlayout.widget.ConstraintLayout>