<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="yes">

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
        android:autofillHints="name"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/lastNameText"
        app:layout_constraintStart_toStartOf="@+id/lastNameText"
        app:layout_constraintTop_toBottomOf="@+id/lastNameText"/>


</androidx.constraintlayout.widget.ConstraintLayout>